trying to add radio buttons for PN6.3 and 10

--- a/calculations.html
+++ b/calculations.html
@@ -74,8 +74,10 @@
 						</span>
 						<span class="form-element-pair radio-bt-txt">
 							<label name="pressureChoice"></label>
-							<input type="radio" id="pressure2" name="PN" value="PN10">
-						</span>-->
+							<input type="radio"
+                                                        id="pressure2" name="PN"
+                                                        value="PN10"> -->
+						</span>
 						<span class="form-element-pair">
 							<label for="flow" id ="flowLabel">Önskat flöde</label>
 							<span id="flow-wrap">
