Added functionality for uploading excel document for pumpcurves

--- a/newObject.html
+++ b/newObject.html
@@ -10,9 +10,12 @@
 		<link rel="stylesheet" href="css/newObject.css">
 		<script src="js/configVariables.js" charset="utf-8"></script>
 		<script src="js/APIMiddleware.js" charset="utf-8"></script>
-		<script src="js/products/newObject.js"></script>
 		<script src="js/vendor/chart.min.js"></script>
 		<script src="js/login/logout.js"></script>
+                <script src="js/products/jquery.min.js"></script>
+                <script src="js/products/xlsx.js"></script>
+                <script src="js/products/jszip.js"></script>
+		<script src="js/products/newObject.js"></script>
 	</head>
 	<body>
 		<div class="topnav">
