slightly changed the appearance of the layout for råhetstal button

--- a/calculations.html
+++ b/calculations.html
@@ -56,11 +56,12 @@
                     </span>
                     <span class="form-element-pair">
                         <input class="button" type="button" name="submit"
-                        id="mu_botton" value="Råhetstal" onclick="show_rho();">
+                        id="mu_botton" value="Råhetstal" onclick="show_rho();"> mm
                         <input class="number-input" style="display:none" data-digits-only
-                            step="0.001" type="number" id="mu"
+                            step="0.01" type="number" id="mu"
                             name="mu"
-                            value="0.1" onkeypress="enterPressed(this, event);">&nbsp; mm
+                            value="0.1" onkeypress="enterPressed(this,
+                            event);"> &nbsp;
                     </span>
                     <!-- Below has been outcommented becuase there is
                       currently nothing that changes depending on the
